# sous-vide-telemetry

./: .gitignore  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: cook.json
src/sousvide/: __init__.py  cli.py  haccp.py  ledger.py
tests/: test_haccp.py  test_ledger.py
